支持 Linux 系统环境下的终端汉化

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -276,7 +276,7 @@ Body:
   Translation: ""
 - Original: "%s: %s is not a integer variable.\n"
   Translation: ""
-- Original: "%s: %s was failed: %s\n"
+- Original: "%s: %s was failed (%s -> %s): %s\n"
   Translation: ""
 - Original: "%s: %s: Invalid %s %d.\n"
   Translation: ""
@@ -712,10 +712,12 @@ Body:
   Translation: "终端信息翻译诊断信息: 语言信息: %s | 位置编码: %s\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
   Translation: "已成功完成 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据有效性校验.\n"
+- Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
+  Translation: "已加载 [{CL_WHITE}]%d[{CL_RESET}] 个脚本, 里面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个传送点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个刷怪点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物已被缓存\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物未被缓存\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' buyingstore autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
   Translation: ""
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' entries for '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets from '[{CL_WHITE}]%s[{CL_RESET}]' table.\n"
-  Translation: "已读取 '[{CL_WHITE}]%d[{CL_RESET}]' 组数据, 共有 [{CL_WHITE}]%d[{CL_RESET}] 个 NPC 限购超市记录在 '[{CL_WHITE}]%s[{CL_RESET}]' 表中.\n"
+  Translation: "已读取 [{CL_WHITE}]%-5d[{CL_RESET}] 组数据, 共有 [{CL_WHITE}]%d[{CL_RESET}] 个 NPC 限购超市记录在 '[{CL_WHITE}]%s[{CL_RESET}]' 表中.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' vending autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
   Translation: ""
 - Original: "Done reading %s.\n"
@@ -985,11 +987,13 @@ Body:
 - Original: "Map Server IP Address : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "地图服务器的 IP 地址 : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Map Server is now online.\n"
-  Translation: "地图服务器已准备就绪, 玩家可以登录游戏了.\n"
+  Translation: "地图服务器已上线, 玩家可以登录游戏了.\n"
 - Original: "Map configuration file not found at: %s\n"
   Translation: ""
 - Original: "Map name '%s' size '%[{PRIuPTR}]' is too long. Truncating to '%d'.\n"
   Translation: ""
+- Original: "Map-Server %d connected: %[{PRIuPTR}] maps, from IP %d.%d.%d.%d port %d.\n"
+  Translation: "地图服务器 %d 已连接: 有 %[{PRIuPTR}] 张地图, IP地址: %d.%d.%d.%d 端口: %d.\n"
 - Original: "Map-Server will trigger an crash for testing the crashrpt system.\n"
   Translation: ""
 - Original: "Map-server #%d has disconnected.\n"
@@ -1001,7 +1005,7 @@ Body:
 - Original: "Map-server connected to char-server '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "地图服务器已连接到角色服务器: '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Maps removed: '[{CL_WHITE}]%d[{CL_RESET}]'[{CL_CLL}].\n"
-  Translation: ""
+  Translation: "总共移除了 maps_athena.conf 中定义的 [{CL_WHITE}]%-3d[{CL_RESET}] 张地图[{CL_CLL}].\n"
 - Original: "Max chars per account '%d' exceeded limit. Defaulting to '%d'.\n"
   Translation: ""
 - Original: "Max fame list size is %d (fame_list_alchemist)\n"
@@ -1071,9 +1075,9 @@ Body:
 - Original: "Monster '%s' (%d, src:%d) reaches max skill limit %d. Ignores '%d' skills left.\n"
   Translation: ""
 - Original: "Multiple interfaces detected..  using %s as our IP address\n"
-  Translation: ""
+  Translation: "检测到本机拥有多张网卡, 使用 %s 作为我们默认的 IP 地址\n"
 - Original: "Multiple interfaces detected...\n"
-  Translation: ""
+  Translation: "检测到本机拥有多张网卡...\n"
 - Original: "MySQL has been unreachable for too long, %d reconnects were attempted. Shutting Down\n"
   Translation: ""
 - Original: "NPC event parameter deprecated! Please use 'NPCNAME::OnEVENT' instead of '%s'.\n"
@@ -1187,7 +1191,7 @@ Body:
 - Original: "Removed invalid/disabled item (ID: %hu, amount: %d) from storage (char_id: %d).\n"
   Translation: ""
 - Original: "Removing map [ %s ] from maplist[{CL_CLL}]\n"
-  Translation: ""
+  Translation: "已从地图列表中移除 [ %s ] 地图[{CL_CLL}]\n"
 - Original: "Request for connection (passwdenc mode) of %s (ip: %s)\n"
   Translation: ""
 - Original: "Request for connection of %s (ip: %s)\n"
@@ -1437,9 +1441,9 @@ Body:
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
   Translation: ""
 - Original: "You are running rAthena with admin privileges, it is not necessary.\n"
-  Translation: ""
+  Translation: "您正在使用管理员身份运行熊猫模拟器, 但我们并不需要如此高的权限.\n"
 - Original: "You are running rAthena with root privileges, it is not necessary.\n"
-  Translation: ""
+  Translation: "您正在使用 root 权限运行熊猫模拟器, 但我们并不需要如此高的权限.\n"
 - Original: "Zero range by %d:%s, divide per 0 avoided!\n"
   Translation: ""
 - Original: "[Instance] Created map '%s' ('%d') from map '%s' ('%d')\n"
@@ -2563,19 +2567,19 @@ Body:
 - Original: "conf/battle/feature.conf achievement is enabled but it requires PACKETVER 2015-05-13 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf attendance system is enabled but it requires PACKETVER 2018-03-07 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 配置文件中启用了成就系统, 但此功能要求 PACKETVER 必须大于等于 2018-03-07 才有效, 正在禁用此功能...\n"
 - Original: "conf/battle/feature.conf banking is enabled but it requires PACKETVER 2013-07-24 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf equip switch is enabled but it requires PACKETVER 2017-02-08 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf homunculus autofeeding is enabled but it requires PACKETVER 2017-09-20 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 配置文件中启用了人工生命体自动喂养功能, 但此功能要求 PACKETVER 必须大于等于 2017-09-20 才有效, 正在禁用此功能...\n"
 - Original: "conf/battle/feature.conf pet auto feed is enabled but it requires PACKETVER 2014-10-08 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf petevolution is enabled but it requires PACKETVER 2014-10-08 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf private airship system is enabled but it requires PACKETVER 2018-03-21 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 配置文件中启用了私有飞空艇系统(世界移动券), 但此功能要求 PACKETVER 必须大于等于 2018-03-21 才有效, 正在禁用此功能...\n"
 - Original: "conf/battle/feature.conf roulette is enabled but it requires PACKETVER 2014-10-22 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf:buying_store is enabled but it requires PACKETVER 2010-04-27 or newer, disabling...\n"
