--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -276,7 +276,7 @@ Body:
   Translation: ""
 - Original: "%s: %s is not a integer variable.\n"
   Translation: ""
-- Original: "%s: %s was failed: %s\n"
+- Original: "%s: %s was failed (%s -> %s): %s\n"
   Translation: ""
 - Original: "%s: %s: Invalid %s %d.\n"
   Translation: ""
@@ -712,10 +712,12 @@ Body:
   Translation: "終端資訊翻譯診斷資訊: 語言資訊: %s | 位置編碼: %s\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
   Translation: "已成功\完成 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 限購超市的資料有效性校驗.\n"
+- Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
+  Translation: "已載入 [{CL_WHITE}]%d[{CL_RESET}] 個指令碼, 裡面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個傳送點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個刷怪點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物已被快取\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物未被快取\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' buyingstore autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
   Translation: ""
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' entries for '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets from '[{CL_WHITE}]%s[{CL_RESET}]' table.\n"
-  Translation: "已讀取 '[{CL_WHITE}]%d[{CL_RESET}]' 組資料, 共有 [{CL_WHITE}]%d[{CL_RESET}] 個 NPC 限購超市記錄在 '[{CL_WHITE}]%s[{CL_RESET}]' 表中.\n"
+  Translation: "已讀取 [{CL_WHITE}]%-5d[{CL_RESET}] 組資料, 共有 [{CL_WHITE}]%d[{CL_RESET}] 個 NPC 限購超市記錄在 '[{CL_WHITE}]%s[{CL_RESET}]' 表中.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' vending autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
   Translation: ""
 - Original: "Done reading %s.\n"
@@ -985,11 +987,13 @@ Body:
 - Original: "Map Server IP Address : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "地圖伺服器的 IP 地址 : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Map Server is now online.\n"
-  Translation: "地圖伺服器已準備就緒, 玩家可以登入遊戲了.\n"
+  Translation: "地圖伺服器已上線, 玩家可以登入遊戲了.\n"
 - Original: "Map configuration file not found at: %s\n"
   Translation: ""
 - Original: "Map name '%s' size '%[{PRIuPTR}]' is too long. Truncating to '%d'.\n"
   Translation: ""
+- Original: "Map-Server %d connected: %[{PRIuPTR}] maps, from IP %d.%d.%d.%d port %d.\n"
+  Translation: "地圖伺服器 %d 已連線: 有 %[{PRIuPTR}] 張地圖, IP地址: %d.%d.%d.%d 埠: %d.\n"
 - Original: "Map-Server will trigger an crash for testing the crashrpt system.\n"
   Translation: ""
 - Original: "Map-server #%d has disconnected.\n"
@@ -1001,7 +1005,7 @@ Body:
 - Original: "Map-server connected to char-server '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "地圖伺服器已連線到角色伺服器: '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Maps removed: '[{CL_WHITE}]%d[{CL_RESET}]'[{CL_CLL}].\n"
-  Translation: ""
+  Translation: "總共移除了 maps_athena.conf 中定義的 [{CL_WHITE}]%-3d[{CL_RESET}] 張地圖[{CL_CLL}].\n"
 - Original: "Max chars per account '%d' exceeded limit. Defaulting to '%d'.\n"
   Translation: ""
 - Original: "Max fame list size is %d (fame_list_alchemist)\n"
@@ -1071,9 +1075,9 @@ Body:
 - Original: "Monster '%s' (%d, src:%d) reaches max skill limit %d. Ignores '%d' skills left.\n"
   Translation: ""
 - Original: "Multiple interfaces detected..  using %s as our IP address\n"
-  Translation: ""
+  Translation: "檢測到本機擁有多張網絡卡, 使用 %s 作為我們預設的 IP 地址\n"
 - Original: "Multiple interfaces detected...\n"
-  Translation: ""
+  Translation: "檢測到本機擁有多張網絡卡...\n"
 - Original: "MySQL has been unreachable for too long, %d reconnects were attempted. Shutting Down\n"
   Translation: ""
 - Original: "NPC event parameter deprecated! Please use 'NPCNAME::OnEVENT' instead of '%s'.\n"
@@ -1187,7 +1191,7 @@ Body:
 - Original: "Removed invalid/disabled item (ID: %hu, amount: %d) from storage (char_id: %d).\n"
   Translation: ""
 - Original: "Removing map [ %s ] from maplist[{CL_CLL}]\n"
-  Translation: ""
+  Translation: "已從地圖列表中移除 [ %s ] 地圖[{CL_CLL}]\n"
 - Original: "Request for connection (passwdenc mode) of %s (ip: %s)\n"
   Translation: ""
 - Original: "Request for connection of %s (ip: %s)\n"
@@ -1437,9 +1441,9 @@ Body:
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
   Translation: ""
 - Original: "You are running rAthena with admin privileges, it is not necessary.\n"
-  Translation: ""
+  Translation: "您正在使用管理員身份執行熊貓模擬器, 但我們並不需要如此高的許\可權.\n"
 - Original: "You are running rAthena with root privileges, it is not necessary.\n"
-  Translation: ""
+  Translation: "您正在使用 root 許\可權執行熊貓模擬器, 但我們並不需要如此高的許\可權.\n"
 - Original: "Zero range by %d:%s, divide per 0 avoided!\n"
   Translation: ""
 - Original: "[Instance] Created map '%s' ('%d') from map '%s' ('%d')\n"
@@ -2563,19 +2567,19 @@ Body:
 - Original: "conf/battle/feature.conf achievement is enabled but it requires PACKETVER 2015-05-13 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf attendance system is enabled but it requires PACKETVER 2018-03-07 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了成就係統, 但此功\能要求 PACKETVER 必須大於等於 2018-03-07 才有效, 正在禁用此功\能...\n"
 - Original: "conf/battle/feature.conf banking is enabled but it requires PACKETVER 2013-07-24 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf equip switch is enabled but it requires PACKETVER 2017-02-08 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf homunculus autofeeding is enabled but it requires PACKETVER 2017-09-20 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了人工生命體自動餵養功\能, 但此功\能要求 PACKETVER 必須大於等於 2017-09-20 才有效, 正在禁用此功\能...\n"
 - Original: "conf/battle/feature.conf pet auto feed is enabled but it requires PACKETVER 2014-10-08 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf petevolution is enabled but it requires PACKETVER 2014-10-08 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf private airship system is enabled but it requires PACKETVER 2018-03-21 or newer, disabling...\n"
-  Translation: ""
+  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了私有飛空艇系統(世界移動券), 但此功\能要求 PACKETVER 必須大於等於 2018-03-21 才有效, 正在禁用此功\能...\n"
 - Original: "conf/battle/feature.conf roulette is enabled but it requires PACKETVER 2014-10-22 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf:buying_store is enabled but it requires PACKETVER 2010-04-27 or newer, disabling...\n"
