继续补充部分常见的翻译文本

--- a/conf/battle/monster.conf
+++ b/conf/battle/monster.conf
@@ -189,10 +189,10 @@ monster_class_change_full_recover: yes
 //  1: 显示魔物的血量 (按 剩余血量/最大血量 方式显示)
 //  2: 显示魔物的血量 (按 百分比 方式显示)
 //  4: 显示魔物的级别
-//  8: 显示魔物的编号 [Pandas 扩展选项]
-// 16: 显示魔物的体型 [Pandas 扩展选项]
-// 32: 显示魔物的种族 [Pandas 扩展选项]
-// 64: 显示魔物的属性和属性等级 [Pandas 扩展选项]
+//  8: 显示魔物的编号 [熊猫扩展选项]
+// 16: 显示魔物的体型 [熊猫扩展选项]
+// 32: 显示魔物的种族 [熊猫扩展选项]
+// 64: 显示魔物的属性和属性等级 [熊猫扩展选项]
 //
 // 注意事项:
 // 1、若启用选项1之后由于魔物血量太大, 而导致客户端无法完整显示“剩余血量/最大血量”的话,
@@ -200,7 +200,7 @@ monster_class_change_full_recover: yes
 // 2、当同时启用选项 1+2+8=11 后, 如果加上魔物编号后超过长度限制, 那么魔物编号将被截断,
 //    请适当的调整要展示的内容.
 //
-// 提示信息: Pandas 建议的默认值为 118
+// 提示信息: 熊猫模拟器建议的默认值为 118
 show_mob_info: 118
 
 // Zeny from mobs
