--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -1,5 +1,5 @@
 ﻿//--------------------------------------------------------------
-// Pandas 战斗配置选项
+// 熊猫模拟器战斗配置选项
 //--------------------------------------------------------------
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写 100 即表示 100%
