--- a/conf/msg_conf/char_msg.conf
+++ b/conf/msg_conf/char_msg.conf
@@ -168,6 +168,6 @@
 228: Achievement Reward Mail
 229: [%s] Achievement Reward.
 
-// Pandas 拓展的信息配置文件
+// 熊猫模拟器拓展的信息配置文件
 // ==================================================
 import: conf/msg_conf/pandas_char_msg.conf
