--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1698,7 +1698,7 @@
 1503: You've entered a PK Zone.
 1504: You've entered a PK Zone (safe until level %d).
 
-// Pandas 拓展的信息配置文件
+// 熊猫模拟器拓展的信息配置文件
 // ==================================================
 import: conf/msg_conf/pandas_map_msg.conf
 
