--- a/conf/msg_conf/map_msg_chn.conf
+++ b/conf/msg_conf/map_msg_chn.conf
@@ -1496,7 +1496,7 @@
 // @guild
 1498: You cannot create a guild because you are in a clan.
 
-// Pandas 拓展的資訊設定檔
+// 熊貓模擬器拓展的資訊設定檔
 // ==================================================
 import: conf/msg_conf/pandas_map_msg.conf
 
