--- a/conf/msg_conf/pandas_char_msg.conf
+++ b/conf/msg_conf/pandas_char_msg.conf
@@ -1,4 +1,4 @@
-﻿//===== Pandas Map-Server Message ============================
+﻿//===== Pandas Char-Server Message ===========================
 //= 角色服务器消息库
 //===== By: ==================================================
 //= 熊猫模拟器开发团队
