--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -348,6 +348,8 @@ Body:
   Translation: ""
 - Original: "%stype=%s%u, length=%lu\n"
   Translation: ""
+- Original: "'[{CL_WHITE}]%s[{CL_RESET}]' logged in. (AID/CID: '[{CL_WHITE}]%d/%d[{CL_RESET}]', IP: '[{CL_WHITE}]%d.%d.%d.%d[{CL_RESET}]', Group '[{CL_WHITE}]%d[{CL_RESET}]').\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已上线. (账号编号: '[{CL_WHITE}]%d[{CL_RESET}]', 角色编号: '[{CL_WHITE}]%d[{CL_RESET}]', IP地址: '[{CL_WHITE}]%d.%d.%d.%d[{CL_RESET}]', 账号的分组级别: '[{CL_WHITE}]%d[{CL_RESET}]').\n"
 - Original: "(%s) mapindex_id2name: Requested name for non-existant map index [%d] in cache.\n"
   Translation: ""
 - Original: "(%s) mapindex_name2id: Map \"%s\" not found in index list!\n"
@@ -995,7 +997,7 @@ Body:
 - Original: "Map-Server %d connected: %[{PRIuPTR}] maps, from IP %d.%d.%d.%d port %d.\n"
   Translation: "地图服务器 %d 已连接: 有 %[{PRIuPTR}] 张地图, IP地址: %d.%d.%d.%d 端口: %d.\n"
 - Original: "Map-Server will trigger an crash for testing the crashrpt system.\n"
-  Translation: ""
+  Translation: "即将触发一次故意的程序崩溃, 用于测试转储文件生成机制.\n"
 - Original: "Map-server #%d has disconnected.\n"
   Translation: "地图服务器 %d 已断开连接.\n"
 - Original: "Map-server %d has NO maps.\n"
@@ -1249,7 +1251,7 @@ Body:
 - Original: "Server is running on '[{CL_WHITE}]PK Mode[{CL_RESET}]'.\n"
   Translation: ""
 - Original: "Server received crash signal! Attempting to save all online characters!\n"
-  Translation: ""
+  Translation: "服务端程序接收到崩溃信号, 正在尝试保存在线角色的数据...\n"
 - Original: "Server supports up to '[{CL_WHITE}]%u[{CL_RESET}]' concurrent connections.\n"
   Translation: "服务端程序能够支持建立 '[{CL_WHITE}]%u[{CL_RESET}]' 个并发连接.\n"
 - Original: "Server uses '[{CL_WHITE}]epoll[{CL_RESET}]' with up to [{CL_WHITE}]%d[{CL_RESET}] events per cycle as event dispatcher\n"
@@ -1457,7 +1459,7 @@ Body:
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                                                                  [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                       Pandas Dev Team Presents                   [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
-  Translation: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                           熊猫开发团队出品                           [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
+  Translation: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                        熊猫模拟器开发团队出品                        [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                 Please don't use it for commercial.              [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: "[{CL_BG_RED}]     [{CL_BT_WHITE}]       对使用此程序及相关套件带来的法律责任, 开发团队概不负责!        [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                ____                    _                         [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
@@ -2567,7 +2569,7 @@ Body:
 - Original: "conf/battle/feature.conf achievement is enabled but it requires PACKETVER 2015-05-13 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf attendance system is enabled but it requires PACKETVER 2018-03-07 or newer, disabling...\n"
-  Translation: "您已在 conf/battle/feature.conf 配置文件中启用了成就系统, 但此功能要求 PACKETVER 必须大于等于 2018-03-07 才有效, 正在禁用此功能...\n"
+  Translation: "您已在 conf/battle/feature.conf 配置文件中启用了每日签到系统, 但此功能要求 PACKETVER 必须大于等于 2018-03-07 才有效, 正在禁用此功能...\n"
 - Original: "conf/battle/feature.conf banking is enabled but it requires PACKETVER 2013-07-24 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf equip switch is enabled but it requires PACKETVER 2017-02-08 or newer, disabling...\n"
