--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -348,6 +348,8 @@ Body:
   Translation: ""
 - Original: "%stype=%s%u, length=%lu\n"
   Translation: ""
+- Original: "'[{CL_WHITE}]%s[{CL_RESET}]' logged in. (AID/CID: '[{CL_WHITE}]%d/%d[{CL_RESET}]', IP: '[{CL_WHITE}]%d.%d.%d.%d[{CL_RESET}]', Group '[{CL_WHITE}]%d[{CL_RESET}]').\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已上線. (賬號編號: '[{CL_WHITE}]%d[{CL_RESET}]', 角色編號: '[{CL_WHITE}]%d[{CL_RESET}]', IP地址: '[{CL_WHITE}]%d.%d.%d.%d[{CL_RESET}]', 賬號的分組級別: '[{CL_WHITE}]%d[{CL_RESET}]').\n"
 - Original: "(%s) mapindex_id2name: Requested name for non-existant map index [%d] in cache.\n"
   Translation: ""
 - Original: "(%s) mapindex_name2id: Map \"%s\" not found in index list!\n"
@@ -995,7 +997,7 @@ Body:
 - Original: "Map-Server %d connected: %[{PRIuPTR}] maps, from IP %d.%d.%d.%d port %d.\n"
   Translation: "地圖伺服器 %d 已連線: 有 %[{PRIuPTR}] 張地圖, IP地址: %d.%d.%d.%d 埠: %d.\n"
 - Original: "Map-Server will trigger an crash for testing the crashrpt system.\n"
-  Translation: ""
+  Translation: "即將觸發一次故意的程式崩潰, 用於測試轉儲檔案生成機制.\n"
 - Original: "Map-server #%d has disconnected.\n"
   Translation: "地圖伺服器 %d 已斷開連線.\n"
 - Original: "Map-server %d has NO maps.\n"
@@ -1249,7 +1251,7 @@ Body:
 - Original: "Server is running on '[{CL_WHITE}]PK Mode[{CL_RESET}]'.\n"
   Translation: ""
 - Original: "Server received crash signal! Attempting to save all online characters!\n"
-  Translation: ""
+  Translation: "服務端程式接收到崩潰訊號, 正在嘗試儲存線上角色的資料...\n"
 - Original: "Server supports up to '[{CL_WHITE}]%u[{CL_RESET}]' concurrent connections.\n"
   Translation: "服務端程式能夠支援建立 '[{CL_WHITE}]%u[{CL_RESET}]' 個併發連線.\n"
 - Original: "Server uses '[{CL_WHITE}]epoll[{CL_RESET}]' with up to [{CL_WHITE}]%d[{CL_RESET}] events per cycle as event dispatcher\n"
@@ -1457,7 +1459,7 @@ Body:
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                                                                  [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                       Pandas Dev Team Presents                   [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
-  Translation: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                           熊貓開發團隊出品                           [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
+  Translation: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                        熊貓模擬器開發團隊出品                        [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                 Please don't use it for commercial.              [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: "[{CL_BG_RED}]     [{CL_BT_WHITE}]       對使用此程式及相關套件帶來的法律責任, 開發團隊概不負責!        [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                ____                    _                         [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
@@ -2567,7 +2569,7 @@ Body:
 - Original: "conf/battle/feature.conf achievement is enabled but it requires PACKETVER 2015-05-13 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf attendance system is enabled but it requires PACKETVER 2018-03-07 or newer, disabling...\n"
-  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了成就係統, 但此功\能要求 PACKETVER 必須大於等於 2018-03-07 才有效, 正在禁用此功\能...\n"
+  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了每日簽到系統, 但此功\能要求 PACKETVER 必須大於等於 2018-03-07 才有效, 正在禁用此功\能...\n"
 - Original: "conf/battle/feature.conf banking is enabled but it requires PACKETVER 2013-07-24 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf equip switch is enabled but it requires PACKETVER 2017-02-08 or newer, disabling...\n"
