--- a/conf/msg_conf/pandas_map_msg.conf
+++ b/conf/msg_conf/pandas_map_msg.conf
@@ -141,5 +141,5 @@
 //// 仅用于复兴前, 复兴后使用的是客户端 msgstringtable.txt 中消息编号为 1923 的文本
 //2099: 正在与其他 NPC 对话时无法使用此功能, 请结束与当前 NPC 的对话后, 再试一次.
 
-// 使用 @mapinfo 指令时, 作为 Pandas 专有的普通地图标记
+// 使用 @mapinfo 指令时, 作为熊猫模拟器专有的普通地图标记
 2100: 熊猫地图标记:
