解决中文角色名在 Linux 终端上显示乱码的问题

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -595,7 +595,7 @@ Body:
 - Original: "Connection of the char-server '%s' accepted.\n"
   Translation: "已接受角色服务器 '%s' 的连接建立请求.\n"
 - Original: "Connection refused (account: %s, banned until %s, ip: %s)\n"
-  Translation: ""
+  Translation: "拒绝连接 (账号: %s, 被封号直到: %s, IP地址: %s)\n"
 - Original: "Connection refused (account: %s, expired ID, ip: %s)\n"
   Translation: ""
 - Original: "Connection refused (account: %s, state: %d, ip: %s)\n"
@@ -649,7 +649,7 @@ Body:
 - Original: "Created Guild %d - %s (Guild Master: %s)\n"
   Translation: ""
 - Original: "Created char: account: %d, char: %d, slot: %d, name: %s\n"
-  Translation: ""
+  Translation: "已创建角色: 账号编号: %d, 角色编号: %d, 槽位编号: %d, 角色名称: %s\n"
 - Original: "Creating Guild (%s)\n"
   Translation: ""
 - Original: "Current script:\n"
@@ -891,7 +891,7 @@ Body:
 - Original: "Invalid message ID '%s' at line %d from '%s' file.\n"
   Translation: ""
 - Original: "Invalid password (account: '%s', ip: %s)\n"
-  Translation: ""
+  Translation: "错误的登录密码 (账号: '%s', IP地址: %s)\n"
 - Original: "Invalid storage with id %d\n"
   Translation: ""
 - Original: "Invalid table name!\n"
@@ -1143,7 +1143,7 @@ Body:
 - Original: "Pincode is disabled.\n"
   Translation: ""
 - Original: "Pinging SQL server to keep connection alive...\n"
-  Translation: ""
+  Translation: "正在给数据库服务器发送心跳包, 以维持连接的激活状态...\n"
 - Original: "Player %s (%d:%d) sent a hexed packet trying to buy %d of nonstackable item %hu!\n"
   Translation: ""
 - Original: "Player %u sent incorrect cash shop buy packet (len %u:%u)!\n"
@@ -1217,7 +1217,7 @@ Body:
 - Original: "Saved %s (%d) data to table %s for %s: %d\n"
   Translation: "已保存 %s (%d) 数据到 %s 表 (%s=%d)\n"
 - Original: "Saved char %d - %s:%s.\n"
-  Translation: "已保存角色编号为: %d, 角色名为: %s 的 %s 数据.\n"
+  Translation: "已保存角色编号为: %d, 角色名为: %s 的%s 数据.\n"
 - Original: "Saved guild (%d - %s):%s\n"
   Translation: ""
 - Original: "Saved guild castle (%d)\n"
@@ -1413,7 +1413,7 @@ Body:
 - Original: "Usage: %s [options]\n"
   Translation: ""
 - Original: "User '%s' is already online - Rejected.\n"
-  Translation: ""
+  Translation: "账号 '%s' 已经在线 - 拒绝本次登录, 并将此账号踢下线.\n"
 - Original: "User Count: %d (Server: %d)\n"
   Translation: ""
 - Original: "Using SQL dbs: %s\n"
@@ -1451,9 +1451,9 @@ Body:
 - Original: "[Instance] Created map '%s' ('%d') from map '%s' ('%d')\n"
   Translation: ""
 - Original: "[Instance] Created: %s (%hu).\n"
-  Translation: ""
+  Translation: "[副本系统] 已创建副本: %s (副本编号: #%hu).\n"
 - Original: "[Instance] Destroyed %hu.\n"
-  Translation: ""
+  Translation: "[副本系统] 已销毁编号为 #%hu 的副本.\n"
 - Original: "[{CL_BG_RED}]     [{CL_BOLD}]                                                                      [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                                                                  [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
@@ -3053,11 +3053,11 @@ Body:
 - Original: "make_connection: Socket #0 is reserved - Please report this!!!\n"
   Translation: ""
 - Original: "make_connection: connect failed (socket #%d, %s)!\n"
-  Translation: ""
+  Translation: "连接失败 (套接字 #%d, %s)!\n"
 - Original: "make_connection: connection failed (socket #%d, not writeable)!\n"
-  Translation: ""
+  Translation: "连接失败 (套接字 #%d, 无法写入数据)!\n"
 - Original: "make_connection: connection failed (socket #%d, timeout after %ds)!\n"
-  Translation: ""
+  Translation: "连接失败 (套接字 #%d, 经过 %d 秒等待, 已被判定为超时)!\n"
 - Original: "make_connection: failed to add socket #%d to epoll event dispatcher: %s\n"
   Translation: ""
 - Original: "make_connection: socket creation failed (%s)!\n"
