--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -595,7 +595,7 @@ Body:
 - Original: "Connection of the char-server '%s' accepted.\n"
   Translation: "已接受角色伺服器 '%s' 的連線建立請求.\n"
 - Original: "Connection refused (account: %s, banned until %s, ip: %s)\n"
-  Translation: ""
+  Translation: "拒絕連線 (賬號: %s, 被封號直到: %s, IP地址: %s)\n"
 - Original: "Connection refused (account: %s, expired ID, ip: %s)\n"
   Translation: ""
 - Original: "Connection refused (account: %s, state: %d, ip: %s)\n"
@@ -649,7 +649,7 @@ Body:
 - Original: "Created Guild %d - %s (Guild Master: %s)\n"
   Translation: ""
 - Original: "Created char: account: %d, char: %d, slot: %d, name: %s\n"
-  Translation: ""
+  Translation: "已建立角色: 賬號編號: %d, 角色編號: %d, 槽位編號: %d, 角色名稱: %s\n"
 - Original: "Creating Guild (%s)\n"
   Translation: ""
 - Original: "Current script:\n"
@@ -891,7 +891,7 @@ Body:
 - Original: "Invalid message ID '%s' at line %d from '%s' file.\n"
   Translation: ""
 - Original: "Invalid password (account: '%s', ip: %s)\n"
-  Translation: ""
+  Translation: "錯誤的登入密碼 (賬號: '%s', IP地址: %s)\n"
 - Original: "Invalid storage with id %d\n"
   Translation: ""
 - Original: "Invalid table name!\n"
@@ -1143,7 +1143,7 @@ Body:
 - Original: "Pincode is disabled.\n"
   Translation: ""
 - Original: "Pinging SQL server to keep connection alive...\n"
-  Translation: ""
+  Translation: "正在給資料庫伺服器傳送心跳包, 以維持連線的啟用狀態...\n"
 - Original: "Player %s (%d:%d) sent a hexed packet trying to buy %d of nonstackable item %hu!\n"
   Translation: ""
 - Original: "Player %u sent incorrect cash shop buy packet (len %u:%u)!\n"
@@ -1217,7 +1217,7 @@ Body:
 - Original: "Saved %s (%d) data to table %s for %s: %d\n"
   Translation: "已儲存 %s (%d) 資料到 %s 表 (%s=%d)\n"
 - Original: "Saved char %d - %s:%s.\n"
-  Translation: "已儲存角色編號為: %d, 角色名為: %s 的 %s 資料.\n"
+  Translation: "已儲存角色編號為: %d, 角色名為: %s 的%s 資料.\n"
 - Original: "Saved guild (%d - %s):%s\n"
   Translation: ""
 - Original: "Saved guild castle (%d)\n"
@@ -1413,7 +1413,7 @@ Body:
 - Original: "Usage: %s [options]\n"
   Translation: ""
 - Original: "User '%s' is already online - Rejected.\n"
-  Translation: ""
+  Translation: "賬號 '%s' 已經線上 - 拒絕本次登入, 並將此賬號踢下線.\n"
 - Original: "User Count: %d (Server: %d)\n"
   Translation: ""
 - Original: "Using SQL dbs: %s\n"
@@ -1451,9 +1451,9 @@ Body:
 - Original: "[Instance] Created map '%s' ('%d') from map '%s' ('%d')\n"
   Translation: ""
 - Original: "[Instance] Created: %s (%hu).\n"
-  Translation: ""
+  Translation: "[副本系統] 已建立副本: %s (副本編號: #%hu).\n"
 - Original: "[Instance] Destroyed %hu.\n"
-  Translation: ""
+  Translation: "[副本系統] 已銷燬編號為 #%hu 的副本.\n"
 - Original: "[{CL_BG_RED}]     [{CL_BOLD}]                                                                      [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                                                                  [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
@@ -3053,11 +3053,11 @@ Body:
 - Original: "make_connection: Socket #0 is reserved - Please report this!!!\n"
   Translation: ""
 - Original: "make_connection: connect failed (socket #%d, %s)!\n"
-  Translation: ""
+  Translation: "連線失敗 (套接字 #%d, %s)!\n"
 - Original: "make_connection: connection failed (socket #%d, not writeable)!\n"
-  Translation: ""
+  Translation: "連線失敗 (套接字 #%d, 無法寫入資料)!\n"
 - Original: "make_connection: connection failed (socket #%d, timeout after %ds)!\n"
-  Translation: ""
+  Translation: "連線失敗 (套接字 #%d, 經過 %d 秒等待, 已被判定為超時)!\n"
 - Original: "make_connection: failed to add socket #%d to epoll event dispatcher: %s\n"
   Translation: ""
 - Original: "make_connection: socket creation failed (%s)!\n"
